--- a/src/quan-ly-xbp-them-tai-ban.html
+++ b/src/quan-ly-xbp-them-tai-ban.html
@@ -531,27 +531,27 @@
                   </div>
                   <div class="accordion">
                     <div class="Accordion" id="thongtinkhaibao">
-                      <div class="Accordion-parent" id="AccordionParent1">
+                      <div class="Accordion-parent" id="AccordionParent1_80733">
                         <div class="Card card card-middle    " id=""> 
                           <div class="card-header d-flex align-items-center justify-content-between">
                             <h3 class="card-header-title d-flex align-items-center">Thông tin xuất bản
                             </h3>
                             <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#Accordion1" aria-expanded="true" aria-controls="Accordion1"><i class="tio-chevron-down"></i></div>
                           </div>
-                          <div class="collapse show" id="Accordion1" data-parent="#AccordionParent1-78.55728785803684">
+                          <div class="collapse show" id="Accordion1" data-parent="#AccordionParent1_80733">
                             <div class="card-body">
                               <form action="#"> 
                                 <h4 class="mb-3">Tái bản: Vật liệu và cấu tạo hoàn thiện nội thất</h4>
                                 <div class="accordion">
                                   <div class="Accordion" id="">
-                                    <div class="Accordion-parent" id="AccordionSubParent1">
+                                    <div class="Accordion-parent" id="AccordionSubParent1_96249">
                                       <div class="Card card card-middle dark   " id=""> 
                                         <div class="card-header d-flex align-items-center justify-content-between">
                                           <h3 class="card-header-title d-flex align-items-center">I. Thông tin hồ sơ
                                           </h3>
                                           <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#AccordionSub1" aria-expanded="true" aria-controls="AccordionSub1"><i class="tio-chevron-down"></i></div>
                                         </div>
-                                        <div class="collapse show" id="AccordionSub1" data-parent="#AccordionSubParent1-90.53331916768047">
+                                        <div class="collapse show" id="AccordionSub1" data-parent="#AccordionSubParent1_96249">
                                           <div class="card-body">
                                             <div class="row"> 
                                               <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
@@ -589,14 +589,14 @@
                                     </div>
                                   </div>
                                   <div class="Accordion" id="">
-                                    <div class="Accordion-parent" id="AccordionSubParent2">
+                                    <div class="Accordion-parent" id="AccordionSubParent2_75888">
                                       <div class="Card card card-middle dark   " id=""> 
                                         <div class="card-header d-flex align-items-center justify-content-between">
                                           <h3 class="card-header-title d-flex align-items-center">II. Thông tin chung
                                           </h3>
                                           <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#AccordionSub2" aria-expanded="true" aria-controls="AccordionSub2"><i class="tio-chevron-down"></i></div>
                                         </div>
-                                        <div class="collapse show" id="AccordionSub2" data-parent="#AccordionSubParent2-60.29414779094351">
+                                        <div class="collapse show" id="AccordionSub2" data-parent="#AccordionSubParent2_75888">
                                           <div class="card-body">
                                             <div class="row"> 
                                               <div class="col-md-6 col-sm-12 mb-3">
@@ -700,14 +700,14 @@
                                     </div>
                                   </div>
                                   <div class="Accordion" id="">
-                                    <div class="Accordion-parent" id="AccordionSubParent3">
+                                    <div class="Accordion-parent" id="AccordionSubParent3_19439">
                                       <div class="Card card card-middle dark   " id=""> 
                                         <div class="card-header d-flex align-items-center justify-content-between">
                                           <h3 class="card-header-title d-flex align-items-center">III. Thông tin hợp đồng xuất bản
                                           </h3>
                                           <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#AccordionSub3" aria-expanded="true" aria-controls="AccordionSub3"><i class="tio-chevron-down"></i></div>
                                         </div>
-                                        <div class="collapse show" id="AccordionSub3" data-parent="#AccordionSubParent3-70.36622509963206">
+                                        <div class="collapse show" id="AccordionSub3" data-parent="#AccordionSubParent3_19439">
                                           <div class="card-body">
                                             <div class="row"> 
                                               <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
@@ -767,14 +767,14 @@
                                     </div>
                                   </div>
                                   <div class="Accordion" id="">
-                                    <div class="Accordion-parent" id="AccordionSubParent4">
+                                    <div class="Accordion-parent" id="AccordionSubParent4_52600">
                                       <div class="Card card card-middle dark   " id=""> 
                                         <div class="card-header d-flex align-items-center justify-content-between">
                                           <h3 class="card-header-title d-flex align-items-center">IV. Đối tượng sử dụng và biên mục đề tài
                                           </h3>
                                           <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#AccordionSub4" aria-expanded="true" aria-controls="AccordionSub4"><i class="tio-chevron-down"></i></div>
                                         </div>
-                                        <div class="collapse show" id="AccordionSub4" data-parent="#AccordionSubParent4-1.2347242475340803">
+                                        <div class="collapse show" id="AccordionSub4" data-parent="#AccordionSubParent4_52600">
                                           <div class="card-body">
                                             <div class="row"> 
                                               <div class="col-md-6 col-sm-12 mb-3">
@@ -899,14 +899,14 @@
                                     </div>
                                   </div>
                                   <div class="Accordion" id="">
-                                    <div class="Accordion-parent" id="AccordionSubParent5">
+                                    <div class="Accordion-parent" id="AccordionSubParent5_46388">
                                       <div class="Card card card-middle dark   " id=""> 
                                         <div class="card-header d-flex align-items-center justify-content-between">
                                           <h3 class="card-header-title d-flex align-items-center">V. Thông tin bản thảo
                                           </h3>
                                           <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#AccordionSub5" aria-expanded="true" aria-controls="AccordionSub5"><i class="tio-chevron-down"></i></div>
                                         </div>
-                                        <div class="collapse show" id="AccordionSub5" data-parent="#AccordionSubParent5-51.20444540498718">
+                                        <div class="collapse show" id="AccordionSub5" data-parent="#AccordionSubParent5_46388">
                                           <div class="card-body">
                                             <div class="row"> 
                                               <div class="col-md-6 col-sm-12 mb-3">
@@ -942,14 +942,14 @@
                                     </div>
                                   </div>
                                   <div class="Accordion" id="">
-                                    <div class="Accordion-parent" id="AccordionSubParent6">
+                                    <div class="Accordion-parent" id="AccordionSubParent6_60905">
                                       <div class="Card card card-middle dark   " id=""> 
                                         <div class="card-header d-flex align-items-center justify-content-between">
                                           <h3 class="card-header-title d-flex align-items-center">V. Thông tin bản thảo
                                           </h3>
                                           <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#AccordionSub6" aria-expanded="true" aria-controls="AccordionSub6"><i class="tio-chevron-down"></i></div>
                                         </div>
-                                        <div class="collapse show" id="AccordionSub6" data-parent="#AccordionSubParent6-26.496192994934752">
+                                        <div class="collapse show" id="AccordionSub6" data-parent="#AccordionSubParent6_60905">
                                           <div class="card-body">
                                             <div class="FormPage-switch-wrapper">
                                               <div class="row"> 
@@ -989,14 +989,14 @@
                                     </div>
                                   </div>
                                   <div class="Accordion" id="">
-                                    <div class="Accordion-parent" id="AccordionSubParent7">
+                                    <div class="Accordion-parent" id="AccordionSubParent7_58734">
                                       <div class="Card card card-middle dark   " id=""> 
                                         <div class="card-header d-flex align-items-center justify-content-between">
                                           <h3 class="card-header-title d-flex align-items-center">VII. Thông tin ấn phẩm điện tử
                                           </h3>
                                           <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#AccordionSub7" aria-expanded="true" aria-controls="AccordionSub7"><i class="tio-chevron-down"></i></div>
                                         </div>
-                                        <div class="collapse show" id="AccordionSub7" data-parent="#AccordionSubParent7-59.719280531876365">
+                                        <div class="collapse show" id="AccordionSub7" data-parent="#AccordionSubParent7_58734">
                                           <div class="card-body">
                                             <div class="row"> 
                                               <div class="col-md-6 col-sm-12 mb-3">
@@ -1048,14 +1048,14 @@
                                     </div>
                                   </div>
                                   <div class="Accordion" id="">
-                                    <div class="Accordion-parent" id="AccordionSubParent8">
+                                    <div class="Accordion-parent" id="AccordionSubParent8_18329">
                                       <div class="Card card card-middle dark   " id=""> 
                                         <div class="card-header d-flex align-items-center justify-content-between">
                                           <h3 class="card-header-title d-flex align-items-center">VIII. Thông tin ấn phẩm in
                                           </h3>
                                           <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#AccordionSub8" aria-expanded="true" aria-controls="AccordionSub8"><i class="tio-chevron-down"></i></div>
                                         </div>
-                                        <div class="collapse show" id="AccordionSub8" data-parent="#AccordionSubParent8-65.21511663561799">
+                                        <div class="collapse show" id="AccordionSub8" data-parent="#AccordionSubParent8_18329">
                                           <div class="card-body">
                                             <div class="row"> 
                                               <div class="col-md-6 col-sm-12 mb-3">
@@ -1151,14 +1151,14 @@
                                     </div>
                                   </div>
                                   <div class="Accordion" id="">
-                                    <div class="Accordion-parent" id="AccordionSubParent9">
+                                    <div class="Accordion-parent" id="AccordionSubParent9_66391">
                                       <div class="Card card card-middle dark   " id=""> 
                                         <div class="card-header d-flex align-items-center justify-content-between">
                                           <h3 class="card-header-title d-flex align-items-center">IX. Thông tin sách dịch
                                           </h3>
                                           <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#AccordionSub9" aria-expanded="true" aria-controls="AccordionSub9"><i class="tio-chevron-down"></i></div>
                                         </div>
-                                        <div class="collapse show" id="AccordionSub9" data-parent="#AccordionSubParent9-28.234272745114808">
+                                        <div class="collapse show" id="AccordionSub9" data-parent="#AccordionSubParent9_66391">
                                           <div class="card-body">
                                             <div class="row"> 
                                               <div class="col-md-6 col-sm-12 mb-3">
@@ -1257,14 +1257,14 @@
                                     </div>
                                   </div>
                                   <div class="Accordion" id="">
-                                    <div class="Accordion-parent" id="AccordionSubParent10">
+                                    <div class="Accordion-parent" id="AccordionSubParent10_91888">
                                       <div class="Card card card-middle dark   " id=""> 
                                         <div class="card-header d-flex align-items-center justify-content-between">
                                           <h3 class="card-header-title d-flex align-items-center">X. Thông tin bản quyền
                                           </h3>
                                           <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#AccordionSub10" aria-expanded="true" aria-controls="AccordionSub10"><i class="tio-chevron-down"></i></div>
                                         </div>
-                                        <div class="collapse show" id="AccordionSub10" data-parent="#AccordionSubParent10-60.178821754062774">
+                                        <div class="collapse show" id="AccordionSub10" data-parent="#AccordionSubParent10_91888">
                                           <div class="card-body">
                                             <div class="row"> 
                                               <div class="col-md-6 col-sm-12 mb-3">
@@ -1345,14 +1345,14 @@
                       </div>
                     </div>
                     <div class="Accordion  bottom" id="cacthongtinkhac">
-                      <div class="Accordion-parent" id="AccordionParent2">
+                      <div class="Accordion-parent" id="AccordionParent2_10560">
                         <div class="Card card card-middle    " id=""> 
                           <div class="card-header d-flex align-items-center justify-content-between">
                             <h3 class="card-header-title d-flex align-items-center">Các thông tin khác
                             </h3>
                             <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#Accordion2" aria-expanded="true" aria-controls="Accordion2"><i class="tio-chevron-down"></i></div>
                           </div>
-                          <div class="collapse show" id="Accordion2" data-parent="#AccordionParent2-12.353739790178931">
+                          <div class="collapse show" id="Accordion2" data-parent="#AccordionParent2_10560">
                             <div class="card-body">
                               <form action="#"> 
                                 <div class="row">
