--- a/src/chinh-sua-ban-thao.html
+++ b/src/chinh-sua-ban-thao.html
@@ -519,7 +519,7 @@
         <div class="content container-fluid">
           <div class="row"> 
             <div class="col-lg-9 pr-lg-2">
-              <div class="Card card card-middle    " id=""> 
+              <div class="Card card card-middle   mb-3 " id=""> 
                 <div class="card-body">
                   <div class="PreviewPage-submit d-flex flex-wrap mb-3 border" style="margin-top: -16px; margin-left: -16px; margin-right: -16px;">
                     <button class="Button btn    btn-primary middle " type="button"><i class="tio-send-outlined mr-1"></i>Gửi
@@ -540,42 +540,42 @@
                       </button>
                     </div>
                   </div>
-                  <div class="PreviewPage-view-file mb-3"></div>
-                  <div class="Card card card-middle    " id=""> 
-                    <div class="card-header d-flex align-items-center justify-content-between">
-                      <h3 class="card-header-title d-flex align-items-center">Thông tin Cơ bản
-                      </h3>
-                    </div>
-                    <div class="card-body">
-                      <div class="Table mb-3">
-                        <table class="table">
-                          <tbody>
-                            <tr>
-                              <td class="text-nowrap"><strong>Trạng thái</strong></td>
-                              <td class="w-100">Bản nháp / đã gửi vào bản đăng ký Xuất bản phẩm</td>
-                            </tr>
-                            <tr>
-                              <td class="text-nowrap"><strong>Thuộc Xuất bản phẩm</strong></td>
-                              <td class="w-100">HƯỚNG DẪN THIẾT KẾ KIẾN TRÚC CẢNH QUAN
-                                <button class="Button btn ml-2   btn-primary middle Button-badge" type="button">Gửi
-                                </button>
-                                <button class="Button btn ml-2   btn-success middle Button-badge" type="button">Xem danh sách lịch sử của XBP
-                                </button>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-                      </div>
-                      <div class="TextArea">
-                        <label class="form-label" for="">GHI CHÚ
-                        </label>
-                        <textarea class="form-control" id="" placeholder="Nhập nội dung tại đây"></textarea>
-                      </div>
-                    </div>
-                  </div>
-                  <div id="scrollSpyEnd"></div>
+                  <div class="PreviewPage-view-file"></div>
                 </div>
               </div>
+              <div class="Card card card-middle    " id=""> 
+                <div class="card-header d-flex align-items-center justify-content-between">
+                  <h3 class="card-header-title d-flex align-items-center">Thông tin Cơ bản
+                  </h3>
+                </div>
+                <div class="card-body">
+                  <div class="Table mb-3">
+                    <table class="table">
+                      <tbody>
+                        <tr>
+                          <td class="text-nowrap"><strong>Trạng thái</strong></td>
+                          <td class="w-100">Bản nháp / đã gửi vào bản đăng ký Xuất bản phẩm</td>
+                        </tr>
+                        <tr>
+                          <td class="text-nowrap"><strong>Thuộc Xuất bản phẩm</strong></td>
+                          <td class="w-100">HƯỚNG DẪN THIẾT KẾ KIẾN TRÚC CẢNH QUAN
+                            <button class="Button btn ml-2   btn-primary middle Button-badge" type="button">Gửi
+                            </button>
+                            <button class="Button btn ml-2   btn-success middle Button-badge" type="button">Xem danh sách lịch sử của XBP
+                            </button>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                  <div class="TextArea">
+                    <label class="form-label" for="">GHI CHÚ
+                    </label>
+                    <textarea class="form-control" id="" placeholder="Nhập nội dung tại đây"></textarea>
+                  </div>
+                </div>
+              </div>
+              <div id="scrollSpyEnd"></div>
             </div>
             <div class="col-lg-3 pl-lg-2"><div class="ScrollSpy navbar-vertical navbar-expand-lg">
               <button class="navbar-toggler btn btn-block btn-white mb-3" type="button" aria-label="Toggle navigation" aria-expanded="false" aria-controls="scrollSpyParent" data-toggle="collapse" data-target="#scrollSpyParent"><span class="d-flex justify-content-between align-items-center"><span class="h5 mb-0"></span><span class="navbar-toggle-default">
