--- a/src/xem-truoc-nguoi-duyet-bieu-in.html
+++ b/src/xem-truoc-nguoi-duyet-bieu-in.html
@@ -521,7 +521,7 @@
             <div class="col-lg-9">
               <div class="Card card card-middle    " id="bieuin"> 
                 <div class="card-body p-0">
-                  <div class="PreviewPage-submit d-flex flex-wrap mb-3 border">
+                  <div class="PreviewPage-submit d-flex flex-wrap border">
                     <button class="Button btn    btn-primary middle " type="button"><i class="tio-checkmark-square-outlined mr-1"></i>Duyệt
                     </button>
                     <button class="Button btn    btn-soft-dark middle " type="button"><i class="tio-clear mr-1"></i>Từ chối
