Fix bugs Responsive

--- a/src/xem-file-dinh-kem.html
+++ b/src/xem-file-dinh-kem.html
@@ -521,10 +521,14 @@
             <div class="col-lg-9">
               <div class="PreviewPage-view-file-header d-flex align-items-center justify-content-between"> 
                 <div class="PreviewPage-view-file-header-title">Bản thảo - 1. Phê duyệt đề tài - Hoàng Hôn Của Phía Đông.docx </div>
-                <div class="PreviewPage-view-file-header-btns d-flex align-items-center"> 
-                  <button class="Button btn text-nowrap   btn-white btn-sm " type="button">Tải lên
-                  </button>
-                  <button class="Button btn text-nowrap   btn-white btn-sm " type="button">Chỉnh sửa
+                <div class="PreviewPage-view-file-header-item d-flex align-items-center">
+                  <div class="PreviewPage-view-file-header-btns d-flex align-items-center"> 
+                    <button class="Button btn text-nowrap   btn-white btn-sm " type="button"><span class="Button-title">Tải lên</span>
+                    </button>
+                    <button class="Button btn text-nowrap   btn-white btn-sm " type="button"><span class="Button-title">Chỉnh sửa</span>
+                    </button>
+                  </div>
+                  <button class="Button btn show-on-mobile ml-3 js-open-scrollspy-mobile btn-icon  btn-soft-dark middle " type="button"><i class="tio-menu-hamburger"></i><span class="Button-title"></span>
                   </button>
                 </div>
               </div>
@@ -592,13 +596,13 @@
                               <td>Bản thảo - 1. Phê duyệt đề tài - Hoàng Hôn Của Phía Đông.docx </td>
                               <td> 
                                 <div class="center">
-                                  <button class="Button btn    btn-primary middle Button-badge" type="button">Xem
+                                  <button class="Button btn    btn-primary middle Button-badge" type="button"><span class="Button-title">Xem</span>
                                   </button>
                                 </div>
                               </td>
                               <td> 
                                 <div class="center">
-                                  <button class="Button btn    btn-success middle Button-badge" type="button">Tải về
+                                  <button class="Button btn    btn-success middle Button-badge" type="button"><span class="Button-title">Tải về</span>
                                   </button>
                                 </div>
                               </td>
@@ -609,13 +613,13 @@
                               <td>Bản thảo - 1. Phê duyệt đề tài - Hoàng Hôn Của Phía Đông.docx </td>
                               <td> 
                                 <div class="center">
-                                  <button class="Button btn    btn-primary middle Button-badge" type="button">Xem
+                                  <button class="Button btn    btn-primary middle Button-badge" type="button"><span class="Button-title">Xem</span>
                                   </button>
                                 </div>
                               </td>
                               <td> 
                                 <div class="center">
-                                  <button class="Button btn    btn-success middle Button-badge" type="button">Tải về
+                                  <button class="Button btn    btn-success middle Button-badge" type="button"><span class="Button-title">Tải về</span>
                                   </button>
                                 </div>
                               </td>
@@ -626,13 +630,13 @@
                               <td>Bản thảo - 1. Phê duyệt đề tài - Hoàng Hôn Của Phía Đông.docx </td>
                               <td> 
                                 <div class="center">
-                                  <button class="Button btn    btn-primary middle Button-badge" type="button">Xem
+                                  <button class="Button btn    btn-primary middle Button-badge" type="button"><span class="Button-title">Xem</span>
                                   </button>
                                 </div>
                               </td>
                               <td> 
                                 <div class="center">
-                                  <button class="Button btn    btn-success middle Button-badge" type="button">Tải về
+                                  <button class="Button btn    btn-success middle Button-badge" type="button"><span class="Button-title">Tải về</span>
                                   </button>
                                 </div>
                               </td>
@@ -643,13 +647,13 @@
                               <td>Bản thảo - 1. Phê duyệt đề tài - Hoàng Hôn Của Phía Đông.docx </td>
                               <td> 
                                 <div class="center">
-                                  <button class="Button btn    btn-primary middle Button-badge" type="button">Xem
+                                  <button class="Button btn    btn-primary middle Button-badge" type="button"><span class="Button-title">Xem</span>
                                   </button>
                                 </div>
                               </td>
                               <td> 
                                 <div class="center">
-                                  <button class="Button btn    btn-success middle Button-badge" type="button">Tải về
+                                  <button class="Button btn    btn-success middle Button-badge" type="button"><span class="Button-title">Tải về</span>
                                   </button>
                                 </div>
                               </td>
@@ -660,13 +664,13 @@
                               <td>Bản thảo - 1. Phê duyệt đề tài - Hoàng Hôn Của Phía Đông.docx </td>
                               <td> 
                                 <div class="center">
-                                  <button class="Button btn    btn-primary middle Button-badge" type="button">Xem
+                                  <button class="Button btn    btn-primary middle Button-badge" type="button"><span class="Button-title">Xem</span>
                                   </button>
                                 </div>
                               </td>
                               <td> 
                                 <div class="center">
-                                  <button class="Button btn    btn-success middle Button-badge" type="button">Tải về
+                                  <button class="Button btn    btn-success middle Button-badge" type="button"><span class="Button-title">Tải về</span>
                                   </button>
                                 </div>
                               </td>
@@ -699,19 +703,26 @@
               </div>
               <div id="scrollSpyEnd"></div>
             </div>
-            <div class="col-lg-3"><div class="ScrollSpy navbar-vertical navbar-expand-lg">
-              <button class="navbar-toggler btn btn-block btn-white mb-3" type="button" aria-label="Toggle navigation" aria-expanded="false" aria-controls="scrollSpyParent" data-toggle="collapse" data-target="#scrollSpyParent"><span class="d-flex justify-content-between align-items-center"><span class="h5 mb-0"></span><span class="navbar-toggle-default">
+            <div class="col-lg-3">
+              <div class="ScrollSpy-drawer-mobile">
+                <div class="ScrollSpy-drawer-mobile-overlay"></div>
+                <div class="ScrollSpy-drawer-mobile-main"><div class="ScrollSpy navbar-vertical navbar-expand-lg">
+                  <button class="active navbar-toggler btn btn-block btn-white mb-3" type="button" aria-label="Toggle navigation" aria-expanded="false" aria-controls="scrollSpyParent" data-toggle="collapse" data-target="#scrollSpyParent"><span class="d-flex justify-content-between align-items-center"><span class="h5 mb-0"></span><span class="navbar-toggle-default">
 <i class="tio-menu-hamburger"></i>
 </span>
 <span class="navbar-toggle-toggled">
 <i class="tio-clear"></i>
 </span>
 </span>
-              </button></button>
-              <div class="collapse navbar-collapse" id="scrollSpyParent">
-                <div class="ScrollSpy-wrapper js-sticky-block js-scrollspy" id="scrollSpy" data-hs-sticky-block-options="{ &quot;parentSelector&quot;: &quot;#scrollSpyParent&quot;, &quot;targetSelector&quot;: &quot;#header&quot;, &quot;startPoint&quot;: &quot;#scrollSpyParent&quot;, &quot;endPoint&quot;: &quot;#scrollSpyEnd&quot;, &quot;stickyOffsetTop&quot;: 8 }">
-                  <button class="Button btn w-100 border   btn-soft-dark btn-sm " type="button"><i class="tio-chevron-left mr-1"></i>Quay lại
-                  </button>
+                  </button></button>
+                  <div class="collapse navbar-collapse show" id="scrollSpyParent">
+                    <div class="ScrollSpy-wrapper js-sticky-block js-scrollspy" id="scrollSpy" data-hs-sticky-block-options="{ &quot;parentSelector&quot;: &quot;#scrollSpyParent&quot;, &quot;targetSelector&quot;: &quot;#header&quot;, &quot;startPoint&quot;: &quot;#scrollSpyParent&quot;, &quot;endPoint&quot;: &quot;#scrollSpyEnd&quot;, &quot;stickyOffsetTop&quot;: 8 }">
+                      <div class="px-3 px-lg-0">
+                        <button class="Button btn w-100 border   btn-soft-dark btn-sm " type="button"><i class="tio-chevron-left mr-1"></i><span class="Button-title">Quay lại</span>
+                        </button>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
